fixed the whitespace on the explore background with a 100vh 100vw fixed background color div

--- a/public/app/stylesheets/styles.css
+++ b/public/app/stylesheets/styles.css
@@ -24,6 +24,16 @@
     background: var(--seafoam);
 } */
 
+#exploreBackground{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: -100; 
+    background-color: var(--seafoam);
+}
+
 #countryDataList{
     margin: 5px;
 }
@@ -842,8 +852,6 @@ main{
     .button:hover{
         cursor: pointer;
     }
-    
-    
     
     #aboutContainer{
         position: fixed;
